# api/gen/models/history_item.go
@@ -1,0 +1,65 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// HistoryItem history item
+//
+// swagger:model HistoryItem
+type HistoryItem struct {
+
+	// command
+	Command string `json:"command,omitempty"`
+
+	// created
+	Created string `json:"created,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// images
+	Images []string `json:"images"`
+
+	// options
+	Options interface{} `json:"options,omitempty"`
+
+	// user id
+	UserID string `json:"user_id,omitempty"`
+}
+
+// Validate validates this history item
+func (m *HistoryItem) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this history item based on context it is used
+func (m *HistoryItem) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *HistoryItem) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *HistoryItem) UnmarshalBinary(b []byte) error {
+	var res HistoryItem
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
