# api/gen/restapi/operations/user/user_history_responses.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package user
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/SpenserCai/sd-webui-discord/api/gen/models"
+)
+
+// UserHistoryOKCode is the HTTP code returned for type UserHistoryOK
+const UserHistoryOKCode int = 200
+
+/*
+UserHistoryOK Success
+
+swagger:response userHistoryOK
+*/
+type UserHistoryOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.HistoryList `json:"body,omitempty"`
+}
+
+// NewUserHistoryOK creates UserHistoryOK with default headers values
+func NewUserHistoryOK() *UserHistoryOK {
+
+	return &UserHistoryOK{}
+}
+
+// WithPayload adds the payload to the user history o k response
+func (o *UserHistoryOK) WithPayload(payload *models.HistoryList) *UserHistoryOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the user history o k response
+func (o *UserHistoryOK) SetPayload(payload *models.HistoryList) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UserHistoryOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
