# website/src/api/account.js
@@ -3,7 +3,7 @@
  * @Date: 2023-10-02 21:33:34
  * @version: 
  * @LastEditors: SpenserCai
- * @LastEditTime: 2023-10-02 21:52:46
+ * @LastEditTime: 2023-10-06 17:23:54
  * @Description: file content
  */
 import request from "@/utils/request";
@@ -12,5 +12,13 @@ export function userinfo() {
   return request({
     url: "/user_info",
     method: "get"
+  });
+}
+
+export function userhistory(body) {
+  return request({
+    url: "/user_history",
+    method: "post",
+    data: body
   });
 }
